add telegram keyboard buttons